--- a/index.html
+++ b/index.html
@@ -8,8 +8,9 @@
 
 
             <body>
-                <h2 class="red-font"> Hello </h2>
-                <h3 class="red-font"> World </h3>
+                <h2 class="center"> 
+                    County Ranker 
+                </h2>
                 
                 <div>
                  
