adding working dropdown

--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
     <link rel="stylesheet" type="text/css" href="index.css">
     <link rel="stylesheet" type="text/css"
         href="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.4.1/semantic.min.css">
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js" integrity="sha512-bLT0Qm9VnAYZDflyKcBaQ2gg0hSYNQrJ8RilYldYQ1FxQYoCLtUjuuRuZo+fjqhx/qtq/1itJ0C2ejDxltZVFg==" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.4.1/semantic.min.js"> </script>
 
 </head >
@@ -15,7 +16,7 @@
                 
                 <div>
                  
-                    <div class="ui fluid search selection dropdown" width:345.4px; left: 780px; style="width: 345.4px;left: 780px;">
+                    <div id="dropdown" class="ui fluid search selection dropdown" width:345.4px; left: 780px; style="width: 345.4px;left: 780px;">
 
                         <input type="hidden" name="County">
                         <i class="dropdown icon"></i>
