--- a/index.html
+++ b/index.html
@@ -14,24 +14,22 @@
                     County Ranker 
                 </h2>
                 
-                <div>
+                <div >
                  
-                    <div id="dropdown" class="ui fluid search selection dropdown" width:345.4px; left: 780px; style="width: 345.4px;left: 780px;">
-
+                    <div id="dropdown" class="ui fluid search selection dropdown">
                         <input type="hidden" name="County">
                         <i class="dropdown icon"></i>
-                        <div class="default text">Select County</div>
+                        <div class = "center" class="default text">Select County</div>
                         <div class="menu">
-                        <div class="item"> Austin</div>
-                        <div class="item"> Bexar</div>
-                        <div class="item"> Brazoria</div>
-                        <div class="item"> Collin</div>
-                        <div class="item"> Dallas</div>
-                        <div class="item"> Harris</div>
-                        <div class="item"> Hudspeth</div>
-                        <div class="item"> King</div>
-                        <div class="item"> Willacy</div>
-                        <div class="item"> Zavala</div>
+                        <div onclick="window.location.href='city_Info.html';"class="item"> Austin</div>
+                        <div onclick="window.location.href='city_Info.html';"class="item"> Bexar</div>
+                        <div onclick="window.location.href='city_Info.html';"class="item"> Brazoria</div>
+                        <div onclick="window.location.href='city_Info.html';"class="item"> Collin</div>
+                        <div onclick="window.location.href='city_Info.html';"class="item"> Dallas</div>
+                        <div onclick="window.location.href='city_Info.html';"class="item"> Harris</div>
+                        <div onclick="window.location.href='city_Info.html';"class="item"> Hudspeth</div>
+                        <div onclick="window.location.href='city_Info.html';"class="item"> King</div>
+                        <div onclick="window.location.href='city_Info.html';"class="item"> Zavala</div>
                         </div>
 
                     </div>
