--- a/index.html
+++ b/index.html
@@ -16,10 +16,10 @@
                 
                 <div >
                  
-                    <div id="dropdown" class="ui fluid search selection dropdown">
+                    <div id="dropdown" class="ui fluid search selection dropdown" width: 345.3px; margin: 0 auto; style= "width: 345.3px; margin: 0 auto;">
                         <input type="hidden" name="County">
                         <i class="dropdown icon"></i>
-                        <div class = "center" class="default text">Select County</div>
+                        <div class="default text">Select County</div>
                         <div class="menu">
                         <div onclick="window.location.href='city_Info.html';"class="item"> Austin</div>
                         <div onclick="window.location.href='city_Info.html';"class="item"> Bexar</div>
