--- a/rankingsbyPopulation.html
+++ b/rankingsbyPopulation.html
@@ -1,4 +1,10 @@
-<h1>Rankings By Population</h1>
+<link rel="stylesheet" type="text/css"
+        href="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.4.1/semantic.min.css">
+<link rel="stylesheet" type="text/css" href="rankingsbyPopulations.css">
+
+<body>
+    <div id="centered-text" class="ui text container">
+        <h1> Rankings By Population</h1>
 
 <p> 1. Harris 4,713,325 <p>
 <p> 2. Dallas 2,635,516 <p>
@@ -10,5 +16,8 @@
 <p> 8. Zavala 11,840 <p>
 <p> 9. Hudspeth 4,886 <p>
 <p> 10.King 272<p>
+    </div>
+
+</body>
 
 
