--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+<html>
 <head>
     <link rel="stylesheet" type="text/css" href="index.css">                    
     <link rel="stylesheet" type="text/css"
@@ -51,3 +52,4 @@
             </body>
 
             <script src="index.js"> </script>
+            </html>
