--- a/rankingsbyDeath.html
+++ b/rankingsbyDeath.html
@@ -1,21 +1,30 @@
-<link rel="stylesheet" type="text/css"
+<html>
+    <head>
+        <link rel="stylesheet" type="text/css"
         href="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.4.1/semantic.min.css">
 <link rel="stylesheet" type="text/css" href="rankingsbyPopulations.css">
+<script type="text/javascript" src = "covid.js"> </script>
 
+</head>
 <body>
-    <div id="centered-text"class="ui text container">
-        <h1> Rankings By Deaths</h1>
+    <script> sortArray('Deaths')</script>
+    <div id="centered-text" class="ui text container">
+        <h1> Rankings By Covid Deaths</h1>
+    <table border = 1 class = "center-table"> 
+            <script>for(var l = 0; l<covidinfos.length; l++){
+            document.write('<tr><td>'); 
+            document.write(l+1);
+            document.write('.</td> <td>');
+            document.write(covidinfos[l].counties);
+            document.write('</td> <td>');
+            document.write(covidinfos[l].deaths);
+            document.write('</td></tr>');
+            }</script>   
 
-<p> 1. Harris 2865 <p>
-<p> 2. Bexar 1427 <p>
-<p> 3. Dallas 1318 <p>
-<p> 4. Collin 199 <p>
-<p> 5. Brazoria 188 <p>
-<p> 6. Willacy 58 <p>
-<p> 7. Zavala 19 <p>
-<p> 8. Austin 10 <p>
-<p> 9. Hudspeth 3 <p>
-<p> 10.King 0 <p>
-    </div>
+</table>   
+
+</div>
 
 </body>
+
+</html>
