--- a/rankingsbyPopulation.html
+++ b/rankingsbyPopulation.html
@@ -7,6 +7,9 @@
 
 </head>
 <body>
+    <button onclick="window.location.href='index.html';" class="ui button">
+        Home
+      </button>
     <script> sortArray('Population')</script>
     <div id="centered-text" class="ui text container">
         <h1> Rankings By Population</h1>
