Fixed Buttons again

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
     <link rel="stylesheet" type="text/css" href="index.css">                    
     <link rel="stylesheet" type="text/css"
         href="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.4.1/semantic.min.css">
+
         <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js" integrity="sha512-bLT0Qm9VnAYZDflyKcBaQ2gg0hSYNQrJ8RilYldYQ1FxQYoCLtUjuuRuZo+fjqhx/qtq/1itJ0C2ejDxltZVFg==" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.4.1/semantic.min.js"> </script>
     
@@ -20,7 +21,7 @@
                     </div>-->
                     <div class = "center"> 
                         <h2> 
-                            County Ranker 
+                            Covid Info By County  
                         </h2>
                     </div>
                     <div>
@@ -46,13 +47,13 @@
                     <div id="list-container" class="ui relaxed divided list">
                    
 
-                    <div class = "flex-row" > 
+                    <div class = "flex-row"  style= "width: 50%;  " > 
                         <button onclick="window.location.href='rankingsbyactiveCases.html';" class="ui button">
                             Rankings By Active Cases
-                          </button><button onclick="window.location.href='rankingsbyactiveGDP.html';" class="ui button">
-                            Rankings By Active GDP
                           </button><button onclick="window.location.href='rankingsbyDeath.html';" class="ui button">
                             Rankings by Death
+                        </button><button onclick="window.location.href='rankingsbyactiveGDP.html';" class="ui button">
+                            Rankings By Real GDP
                           </button><button onclick="window.location.href='rankingsbyPopulation.html';" class="ui button">
                             Rankings By Population
                           </button>
