--- a/index.html
+++ b/index.html
@@ -34,13 +34,13 @@
                             <div class="menu">
                             <div onclick="updateCard('Austin')"class="item"> Austin</div>
                             <div onclick="updateCard('Bexar')"class="item"> Bexar</div>
-                            <div onclick="window.location.href='city_Info.html';"class="item"> Brazoria</div>
-                            <div onclick="window.location.href='city_Info.html';"class="item"> Collin</div>
-                            <div onclick="window.location.href='city_Info.html';"class="item"> Dallas</div>
-                            <div onclick="window.location.href='city_Info.html';"class="item"> Harris</div>
-                            <div onclick="window.location.href='city_Info.html';"class="item"> Hudspeth</div>
-                            <div onclick="window.location.href='city_Info.html';"class="item"> King</div>
-                            <div onclick="window.location.href='city_Info.html';"class="item"> Zavala</div>
+                            <div onclick="updateCard('Brazoria')"class="item"> Brazoria</div>
+                            <div onclick="updateCard('Collin')"class="item"> Collin</div>
+                            <div onclick="updateCard('Dallas')"class="item"> Dallas</div>
+                            <div onclick="updateCard('Harris')"class="item"> Harris</div>
+                            <div onclick="updateCard('Hudspeth')"class="item"> Hudspeth</div>
+                            <div onclick="updateCard('King')"class="item"> King</div>
+                            <div onclick="updateCard('Zavala')"class="item"> Zavala</div>
                             </div>
 
                         </div>
@@ -60,7 +60,7 @@
                           </button>
 
                     </div>
-                    <div id="list-container" class="ui relaxed divided list">
+                    <div id="list-container" class = "center"class="ui relaxed divided list">
                         <div>
                             <div class="ui card">
                                 <div class="content">
