--- a/index.html
+++ b/index.html
@@ -50,9 +50,9 @@
 
                     <div class = "flex-row"  style= "width: 50%;  " > 
                         <button onclick="window.location.href='rankingsbyactiveCases.html';" class="ui button">
-                            Rankings By Active Cases
+                            Rankings By Active Covid Cases
                           </button><button onclick="window.location.href='rankingsbyDeath.html';" class="ui button">
-                            Rankings by Death
+                            Rankings by Covid Deaths
                         </button><button onclick="window.location.href='rankingsbyactiveGDP.html';" class="ui button">
                             Rankings By Real GDP
                           </button><button onclick="window.location.href='rankingsbyPopulation.html';" class="ui button">
