Fixed card and made it hidden to begin with

--- a/index.html
+++ b/index.html
@@ -20,9 +20,11 @@
 
                         <p>14h</p>
                     </div>-->
-                    <div class = "center"> 
+                    <div class = "center" style="
+                    margin-top: 20px;
+                    margin-bottom: 20px;"> 
                         <h2> 
-                            Covid Info By County  
+                            Search For a Texas County  
                         </h2>
                     </div>
                     <div>
@@ -62,7 +64,7 @@
                     </div>
                     <div id="list-container" class = "center"class="ui relaxed divided list">
                         <div>
-                            <div class="ui card">
+                            <div id="displays" style="display:none" class="ui card">
                                 <div class="content">
                                   <div id="cityName" class="header">County name </div>
                                   <div class="description">
