fixed title and card spacing

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
                         <p>14h</p>
                     </div>-->
                     <div class = "center" style="
-                    margin-top: 20px;
+                    margin-top: 50px;
                     margin-bottom: 20px;"> 
                         <h2> 
                             Search For a Texas County  
@@ -62,7 +62,7 @@
                           </button>
 
                     </div>
-                    <div id="list-container" class = "center"class="ui relaxed divided list">
+                    <div id="list-container" class = "center"class="ui relaxed divided list" style="margin-top: 50px;">
                         <div>
                             <div id="displays" style="display:none" class="ui card">
                                 <div class="content">
