Added missing county

--- a/index.html
+++ b/index.html
@@ -42,6 +42,7 @@
                             <div onclick="updateCard('Harris')"class="item"> Harris</div>
                             <div onclick="updateCard('Hudspeth')"class="item"> Hudspeth</div>
                             <div onclick="updateCard('King')"class="item"> King</div>
+                            <div onclick="updateCard('Willacy')"class="item"> Willacy</div>
                             <div onclick="updateCard('Zavala')"class="item"> Zavala</div>
                             </div>
 
