Added Hyperlinks for resources

--- a/index.html
+++ b/index.html
@@ -61,6 +61,7 @@
                           </button><button onclick="window.location.href='rankingsbyPopulation.html';" class="ui button">
                             Rankings By Population
                           </button>
+                          
 
                     </div>
                     <div id="list-container" class = "center"class="ui relaxed divided list" style="margin-top: 50px;">
@@ -78,6 +79,7 @@
                               </div>
                         </div>
                     </div>
+                    <div class = "user-display"> <a href="https://www.texas-demographics.com/counties_by_population">Population</a> </div>
                   
                 </div>
 
