--- a/index.html
+++ b/index.html
@@ -53,13 +53,13 @@
                    
 
                     <div class = "flex-row"  style= "width: 50%;  " > 
-                        <button onclick="window.location.href='rankingsbyactiveCases.html';" class="ui button">
+                        <button onclick="window.location.href='rankings.html?action=Active Covid Cases';" class="ui button">
                             Rankings By Active Covid Cases
-                          </button><button onclick="window.location.href='rankingsbyDeath.html';" class="ui button">
+                          </button><button onclick="window.location.href='rankings.html?action=Covid Deaths';" class="ui button">
                             Rankings by Covid Deaths
-                        </button><button onclick="window.location.href='rankingsbyactiveGDP.html';" class="ui button">
+                        </button><button onclick="window.location.href='rankings.html?action=Real GDP';" class="ui button">
                             Rankings By Real GDP
-                          </button><button onclick="window.location.href='rankingsbyPopulation.html';" class="ui button">
+                          </button><button onclick="window.location.href='rankings.html?action=Population';" class="ui button">
                             Rankings By Population
                           </button>
                           
