--- a/index.html
+++ b/index.html
@@ -41,6 +41,7 @@
                             <div onclick="updateCard('Collin')"class="item"> Collin</div>
                             <div onclick="updateCard('Dallas')"class="item"> Dallas</div>
                             <div onclick="updateCard('Denton')"class="item"> Denton</div>
+                            <div onclick="updateCard('El Paso')"class="item"> El Paso</div>
                             <div onclick="updateCard('Harris')"class="item"> Harris</div>
                             <div onclick="updateCard('Hudspeth')"class="item"> Hudspeth</div>
                             <div onclick="updateCard('King')"class="item"> King</div>
