Added one more county and dropdown

--- a/index.html
+++ b/index.html
@@ -45,6 +45,9 @@
                             <div onclick="updateCard('Harris')"class="item"> Harris</div>
                             <div onclick="updateCard('Hudspeth')"class="item"> Hudspeth</div>
                             <div onclick="updateCard('King')"class="item"> King</div>
+                            <div onclick="updateCard('Liberty')"class="item"> Liberty</div>
+                            <div onclick="updateCard('Newton')"class="item"> Newton</div>
+                            <div onclick="updateCard('Trinity')"class="item"> Trinity</div>
                             <div onclick="updateCard('Willacy')"class="item"> Willacy</div>
                             <div onclick="updateCard('Zavala')"class="item"> Zavala</div>
                             </div>
