--- a/rankings.html
+++ b/rankings.html
@@ -7,8 +7,7 @@
 <script type="text/javascript" src = "covid.js"> </script>
 
 </head>
-<body style= "background-image: url('https://www.betsyrossflaggirl.com/images/stories/virtuemart/product/Texas_Nylon_Flag_4a81c46a12ac5.gif');
-background-repeat: no-repeat; background-position: center; background-position-y: 500px; background-size: 300px 200px;">
+<body>
     <script>var action = getParameterByName('action', url = window.location.href)</script>
     <script> 
         switch(action){
